<resources>
    <string name="app_name">PowerGym</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="ajustes">Ajustes</string>
    <string name="clientes">Clientes</string>
    <string name="contabilidad">Contabilidad</string>
    <string name="correo_masivo">Correo Masivo</string>
    <string name="proveedores">Proveedores</string>
    <string name="introduzca_el_id">Introduzca el id</string>
    <string name="buscar_por_id">Buscar por id:</string>
    <string name="todo">TODO</string>
    <string name="apellidos">Apellidos:</string>
    <string name="email">Email:</string>
    <string name="id">ID:</string>
    <string name="telefono">Telefono:</string>
    <string name="nombre">Nombre:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduzca_su_fecha_de_nacimiento">Introduzca su fecha de nacimiento</string>
    <string name="introduzca_sus_apellidos">Introduzca sus apellidos</string>
    <string name="introduzca_su_email">Introduzca su email</string>
    <string name="introduzca_su_telefono">Introduzca su telefono</string>
    <string name="introduzca_su_nombre">Introduzca su nombre</string>
    <string name="a_adir_cliente">Añadir Cliente</string>
    <string name="modificar_cliente">Modificar Cliente</string>
    <string name="eliminar_cliente">Eliminar Cliente</string>
    <string name="a_adir_proveedor">Añadir Proveedor</string>
    <string name="modificar_proveedor">Modificar Proveedor</string>
    <string name="eliminar_proveedor">Eliminar Proveedor</string>
    <string name="servicio">Servicio:</string>
    <string name="direccion">Direccion:</string>
    <string name="introduzca_el_nombre">Introduzca el nombre</string>
    <string name="introduzca_el_telefono">Introduzca el telefono</string>
    <string name="introduzca_el_email">Introduzca el email</string>
    <string name="introduzca_la_direccion">Introduzca la direccion</string>
    <string name="introduzca_el_servicio">Introduzca el servicio</string>
    <string name="escriba_el_mensaje">Escriba el mensaje</string>
    <string name="suspension">...</string>
    <string name="asunto">Asunto:</string>
    <string name="enviar_a">Enviar a :</string>
    <string name="empleados">Empleados</string>
    <string name="enviar">Enviar</string>
    <string name="clientes_activos">Clientes activos:</string>
    <string name="_29_90">29.90€</string>
    <string name="cuota_mensual">Cuota mensual:</string>
    <string name="usuario">Usuario</string>
    <string name="introduzca_la_contrase_a">Introduzca la contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduzca_el_usuario">Introduzca el usuario</string>
    <string name="powergym">PowerGym</string>
    <string name="siguiente_remesa">Siguiente remesa:</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="concepto">Concepto</string>
    <string name="fecha">fecha</string>
    <string name="importe">importe</string>
    <string name="total_gastos">Total gastos:</string>
    <string name="introduzca_el_valor_del_importe">Introduzca el valor del importe</string>
    <string name="Importe">Importe</string>
    <string name="introduzca_la_fecha_del_gasto">Introduzca la fecha del gasto</string>
    <string name="introduzca_el_concepto_del_gasto">Introduzca el concepto del gasto</string>
    <string name="Fecha">Fecha</string>
    <string name="a_adir_gasto">Añadir gasto</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="sonido">Sonido</string>
    <string name="modo_nocturno">Modo nocturno</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
</resources>