<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="211dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/powergym"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/Usuario"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/usuario"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="VisualLintOverlap" />

    <EditText
        android:id="@+id/input_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/introduzca_la_contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contraseña"
        app:layout_constraintVertical_bias="0.131"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/Contraseña"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/contrase_a"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/input_usuario"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/introduzca_el_usuario"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usuario"
        app:layout_constraintVertical_bias="0.469"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/login"
        android:layout_width="78dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_contraseña"
        app:layout_constraintVertical_bias="0.491"
        app:srcCompat="@drawable/login"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="226dp"
        android:layout_height="179dp"
        app:layout_constraintBottom_toTopOf="@+id/input_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>